# strata

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/strata-common/: Cargo.toml
crates/strata-common/src/: classification.rs  dossier.rs  lib.rs  policy.rs  retention.rs  search.rs  status.rs
crates/strata-server/: Cargo.toml
crates/strata-server/src/: crypto.rs  documents.rs  dossiers.rs  error.rs  events.rs  identity.rs  lib.rs  main.rs  placement.rs  policy.rs  retention.rs  search.rs
crates/strata-server/tests/: classification_api.rs  dossier_api.rs  retention_api.rs  search_api.rs  status_api.rs
crates/strata-storage/: Cargo.toml
crates/strata-storage/src/: lib.rs  local_fs.rs  memory.rs
crates/strata-workflow/: Cargo.toml
crates/strata-workflow/src/: engine.rs  error.rs  export.rs  flow.rs  flows.rs  identity.rs  lib.rs  main.rs  runs.rs
crates/strata-workflow/tests/: export_import_api.rs  run_log_api.rs
deploy/: Dockerfile.frontend  Dockerfile.server  Dockerfile.workflow  docker-compose.yml
docs/: architecture.md  flow-export-format.md  search-api.md
docs/requirements/: README.md  access.md  capture.md  deliver.md  preserve.md  search.md  store.md  workflow.md
frontend/: package-lock.json  package.json
