[workspace]
resolver = "2"
members = [
    "crates/strata-common",
    "crates/strata-storage",
    "crates/strata-server",
    "crates/strata-workflow",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/firn-labs/strata"
authors = ["Firn Labs"]

[workspace.dependencies]
strata-common = { path = "crates/strata-common" }
strata-storage = { path = "crates/strata-storage" }

anyhow = "1"
async-trait = "0.1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = "thin"
strip = true
