[package]
name = "strata-server"
description = "Strata core API server: storage access, metadata, auth, search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
strata-common.workspace = true
strata-storage.workspace = true

anyhow.workspace = true
axum.workspace = true
chacha20poly1305.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
