[package]
name = "strata-storage"
description = "Pluggable storage abstraction for Strata (local filesystem, S3, SMB, NFS, ...)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
strata-common.workspace = true

async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
